--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ge<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -31,11 +31,10 @@
     </table>
     <hr>
     <h3>Leave a message</h3>
-    <form action="">
-        <label for="">Name</label><input type="text"><br>
-        <label for="">Age</label><input type="number" min="1" max="99" required><br>
-        <label for="">Date of birth</label><input type="date" required="false"><br>
-        <label for="">I understand the rights and conditions</label><input type="checkbox"><br>
+    <form action="mailto:francis.barrow@gmail.com" method="post" enctype="text/plain">
+        <label for="">Your name:</label><input name="Name" type="text"><br>
+        <label for="">Your email address</label><input type="email" name="email">
+        <label for="">Your Message</label><input type="textarea" name="Message" rows="8" cols="80"><br>
         <input type="submit">
 
     </form>
