--- a/contact.html
+++ b/contact.html
@@ -9,11 +9,11 @@ ge<!DOCTYPE html>
 </head>
 
 <body>
-    <h1>Francis Barrow</h1>
+    <h1>Franfif</h1>
     <table>
         <thead>
             <tr>
-                <th>Contact information</th>
+                <th>Contact information (this is all fake...)</th>
             </tr>
         </thead>
         <tr>
@@ -22,7 +22,7 @@ ge<!DOCTYPE html>
         </tr>
         <tr>
             <td>email</td>
-            <td><a href="mailto:francis.barrow@gmail.com">francis.barrow@gmail.com</a></td>
+            <td><a href="mailto:franfif@gmail.com">franfif@gmail.com</a></td>
         </tr>
         <tr>
             <td>Phone</td>
@@ -31,7 +31,7 @@ ge<!DOCTYPE html>
     </table>
     <hr>
     <h3>Leave a message</h3>
-    <form action="mailto:francis.barrow@gmail.com" method="post" enctype="text/plain">
+    <form action="mailto:franfif@gmail.com" method="post" enctype="text/plain">
         <label for="">Your name:</label><input name="Name" type="text"><br>
         <label for="">Your email address</label><input type="email" name="email">
         <label for="">Your Message</label><input type="textarea" name="Message" rows="8" cols="80"><br>
