--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <tr>
             <td><img src="francis.jpg" alt="Francis profile picture"></td>
             <td>
-                <h1>Francis Barrow</h1>
+                <h1>Franfif</h1>
                 <p><em>Developper in training</em></p>
                 <br>
                 <p>👨‍🔧 Work in progress</p>
